# ucsc_teaching_demo

./: .gitignore  README.md
C++/: CMakeLists.txt  Graph.cpp  Graph.h  graph.cpp  graph.h  graph.hpp  graph_test.cpp  main.cpp
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/: Graph.kt  Main.kt
kotlin/src/test/kotlin/: GraphTest.kt
python/: graph.py  graph_test.py
